<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:background="@drawable/filter_background_1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvHeadTitleRad"
        android:text="@string/filter_options_tv"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:textColor="@color/color_btn_inactive_2"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tvDate"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/roboto_italic"
        app:layout_constraintTop_toBottomOf="@id/tvHeadTitleRad"
        app:layout_constraintStart_toStartOf="@id/panelDateFilter"
        android:text="@string/sort_by_date_tv"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="19sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/panelDateFilter"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFirstNew"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/first_new_tv"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/color_btn_2"
            android:background="@drawable/back_btn_2"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="5dp"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFirstOld"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/first_old_tv"
            android:backgroundTint="@color/color_btn_inactive_2"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/back_btn_2"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tvSearch"
        android:fontFamily="@font/roboto_italic"
        app:layout_constraintTop_toBottomOf="@id/panelDateFilter"
        android:text="@string/set_rating_of_article_tv"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvSearch"
        app:layout_constraintStart_toStartOf="@id/panelDateFilter"
        android:numStars="5"
        android:layout_gravity="center_horizontal"
        android:rating="0.0"
        android:theme="@style/RatingBar"
        android:stepSize="0.5"
        android:saveEnabled="true"
        android:layout_width="wrap_content"
        android:contentDescription="Rating news"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>