<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".screens.profile.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:id="@+id/imgProfile"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_person"
            app:civ_border_color="@color/color_purple"
            app:civ_border_width="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="250dp"
            android:layout_height="250dp"/>


        <ImageButton
            android:id="@+id/btnEditProfilePhoto"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@id/imgProfile"
            app:layout_constraintEnd_toEndOf="@id/imgProfile"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/color_btn_2"
            android:background="@drawable/back_btn"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="Edit photo profile" />


        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/tvEmail"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btnEditProfilePhoto"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@id/imgProfile"
            android:padding="15dp"
            android:backgroundTint="@color/color_btn_inactive_2"
            android:background="@drawable/back_btn"
            android:textColor="@color/white"
            tools:text="example@gmail.com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <LinearLayout
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/imgProfile"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edLoginLayout"
                app:helperTextTextColor="@color/color_purple"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                app:helperText="Login"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edLogin"
                    android:hint="@string/enter_login_hint"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:background="@drawable/back_ed_input"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edNumberLayout"
                app:helperTextTextColor="@color/color_purple"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                app:prefixText="+7"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="Telephone number"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNumber"
                    android:hint="@string/enter_telephone_number_hint"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:digits="1234567890+()-"
                    android:background="@drawable/back_ed_input"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edStatusLayout"
                app:helperTextTextColor="@color/color_purple"
                android:layout_marginTop="5dp"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                app:helperText="User status"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edStatus"
                    android:hint="@string/enter_person_status_hint"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:background="@drawable/back_ed_input"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edOldPasswordLayout"
                app:helperTextTextColor="@color/color_purple"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                app:helperText="Old password"
                app:endIconMode="password_toggle"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edOldPassword"
                    android:hint="@string/enter_old_password_hint"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:background="@drawable/back_ed_input"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edNewPasswordLayout"
                app:helperTextTextColor="@color/color_purple"
                android:layout_marginTop="5dp"
                app:endIconMode="password_toggle"
                android:layout_width="match_parent"
                app:helperText="New password"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNewPassword"
                    android:hint="@string/enter_new_password_hint"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:background="@drawable/back_ed_input"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditProfile"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:textAllCaps="false"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/user_profile_update_btn"
                android:drawableStart="@drawable/ic_edit_person"
                android:background="@drawable/back_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExit"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="15dp"
                android:textAllCaps="false"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/exit_from_account_btn"
                android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
                android:backgroundTint="#950505"
                android:background="@drawable/back_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>