<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".screens.signup.SignUpFragment">

    <RelativeLayout
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/color_purple"
        android:background="@drawable/back_signup"
        android:layout_width="0dp"
        android:layout_height="180dp">
        <ImageView
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:src="@drawable/big_icon_logo_two"
            android:cropToPadding="true"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tvHeadTitle"
        android:fontFamily="@font/roboto_bold"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sign_up_to_account_tv"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/color_head_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

<!--    <LinearLayout
        android:id="@+id/panelInput"
        app:layout_constraintTop_toBottomOf="@id/tvHeadTitle"
        app:layout_constraintBottom_toTopOf="@id/panelBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">



    </LinearLayout>-->

    <ScrollView
        android:id="@+id/panelInput"
        app:layout_constraintTop_toBottomOf="@id/tvHeadTitle"
        app:layout_constraintBottom_toTopOf="@id/panelBtn"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_email_hint"
                app:helperText="Required email"
                app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/color_purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edLoginLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_login_hint"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:helperText="Required login"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/color_purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edLogin"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edNumLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_telephone_number_hint"
                app:helperText="Required number"
                app:startIconDrawable="@drawable/ic_baseline_call_24"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                app:prefixText="+7"
                app:helperTextTextColor="@color/color_purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edNum"
                    android:inputType="phone"
                    android:digits="1234567890+()-"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edPasswordLayout"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password_hint"
                app:endIconMode="password_toggle"
                app:helperText="Required password"
                app:counterEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:helperTextTextColor="@color/color_purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edPasswordLayoutConfirm"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/confirm_your_password_hint"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:helperText="Required password"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:helperTextTextColor="@color/color_purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPasswordConfirm"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/panelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogInEmail"
            android:background="@drawable/back_btn_sign"
            android:layout_width="match_parent"
            android:text="@string/sign_up_with_email_btn"
            android:paddingStart="15dp"
            android:fontFamily="@font/roboto_regular"
            android:textAllCaps="false"
            android:drawableTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24_2"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="50dp"/>

<!--        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogInGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/back_btn_sign"
            android:drawableStart="@drawable/ic__google"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:text="Sign Up with Google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>